--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>timeoutstream</groupId>
-	<artifactId>timeoutstream</artifactId>
-	<version>1.0-SNAPSHOT</version>
-
-
+	<groupId>com.github.misberner.stdioipc</groupId>
+	<artifactId>stdioipc</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
 </project>
